- Period
  - add toStandardDuration()
  - add toStandardWeeks(), toStandardDays(), toStandardHours(),
    toStandardMinutes(), toStandardSeconds()
  methods to convert a period to other types using the standard
  conversions (7 day week, 24 hour day, ...)

- Period
  - add plus(ReadablePeriod), minus(ReadablePeriod)
  methods to add and subtract whole periods rather than just single fields

- LocalDate.toLocalDateTime
  - provide mechanism to create LocalDateTime from LocalDate and LocalTime

- Performance enhancement for LocalDate, LocalTime and LocalDateTime
  - equals, compareTo, Period construction

- Period.toString(PeriodFormatter), MutablePeriod.toString(PeriodFormatter)
  - allow periods to be directly formatted, as with datetimes

- DateTimeZone
  - add isStandardOffset() to assist in determining if DST applies

- Interval
  - add (long,long,DateTimeZone) constructor, emphasising that intervals
    include a time zone


Compatibility with 1.4
----------------------
Binary compatible - Yes, except
  Internal class LenientDateTimeField has an incompatible change to
  getInstance() and the constructor

Source compatible - Yes, except
  Internal class LenientDateTimeField has an incompatible change to
  getInstance() and the constructor

Serialization compatible - Yes

Data compatible - Yes, except
  - Format of time zone data files changed slightly to fix bug
    This mainly affects Australia
  - DateTimeZone data updated to version 2007f

Semantic compatible - Yes


Deprecations since 1.4
----------------------
None


Bug fixes since 1.4
-------------------
- Daylight savings cutover in Spring incorrect
  A problem with DST cutover in Spring meant that the result of many
  methods would be different depending on whether the time zone was in the
  Eastern or Western hemisphere. Now, the DST cutover is consistent, such
  that if a time is requested within the cutover, it will be pushed forwards
  into summer time. [1710316, 1747219, 1755158]
